+ #321 (Core)(breaking change) Removed CoreMetadataProvider.GetImplementationSpecificScenarioCategories() and GetImplementationSpecificFeatureDescription() methods and customization capability
+ #321 (Framework)(breaking change) Replaced StepExecution.IgnoreScenario() extension method from LightBddRunner with Ignore() method implemented directly on StepExecution

Version 3.7.0
----------------------------------------
+ #207 (LightBDD.Framework)(Change) Modernised Html Report
+ #207 (LightBDD.Framework)(new) Added ability to overrride CSS styles, Logo and Favicon with cfg.ReportWritersConfiguration().AddFileWriter<HtmlReportFormatter>() method
+ #281 (LightBDD.Core)(new) Added IScenarioSetUp and IScenarioTearDown execution extension interfaces allowing to run scenario set up / tear down when implemented on fixture class
+ #281 (LightBDD.Core)(Change) Exposed IScenario.Fixture property allowing scenario decorators accessing the fixture object
+ #281 (LightBDD.Core)(new) Added ability to register global set up and tear down for resources and activities by using `ExecutionExtensionsConfiguration`
+ #282 (LightBDD.Framework)(Change) Updated Html Report to have collapsible sub-steps being collapsed by default
+ #288 (LightBDD.Core)(Change) Format of non-inline step parameters with <$name> parameter reference
+ #292 (LightBDD.Fixie3)(new) Created LightBDD.Fixie3 project with dependency on fixie 3.x
+ #292 (LightBDD.Fixie2)(Change) Deprecated LightBDD.Fixie2 project in favor of LightBDD.Fixie3
+ #293 (LightBDD.MsTest3)(new) Created LightBDD.MsTest3 project with dependency on MSTest.TestFramework 3.x
+ #293 (LightBDD.MsTest2)(Change) Deprecated LightBDD.MsTest2 project in favor of LightBDD.MsTest3
+ #294 (all)(Change) Updated net461 target framework to net462 (while leaving net461 coverage via .netstandard2.0 target framework)
+ #294 (LightBDD.XUnit2)(Change) Updated xunit package dependency version from 2.4.1 to 2.4.2