@@ -9,12 +9,6 @@ Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "Example.Domain", "Example.D
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Framework", "..\src\LightBDD.Framework\LightBDD.Framework.csproj", "{76150B64-C200-4893-8375-479E377389CC}"
 EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Autofac", "..\src\LightBDD.Autofac\LightBDD.Autofac.csproj", "{BA30A12E-C25B-47DF-9761-C3D752C59D3A}"
-EndProject
-Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Extensions.DependencyInjection", "..\src\LightBDD.Extensions.DependencyInjection\LightBDD.Extensions.DependencyInjection.csproj", "{9BA3AECB-F606-4250-A1C3-D50E5AB53154}"
-EndProject
-Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "DI", "DI", "{82B10F43-3A68-401C-99AB-515D409F6CD3}"
-EndProject
 Project("{2150E333-8FDC-42A3-9474-1A3956D46DE8}") = "src", "src", "{008F5231-8623-4F69-88A6-45E858187BC4}"
 EndProject
 Project("{9A19103F-16F7-4668-BE54-9A1E7A4F7556}") = "LightBDD.Runner", "..\src\LightBDD.Runner\LightBDD.Runner.csproj", "{3B180912-ED04-42FE-A882-3E997038A063}"
@@ -81,38 +75,6 @@ Global
 		{76150B64-C200-4893-8375-479E377389CC}.Release|x64.Build.0 = Release|Any CPU
 		{76150B64-C200-4893-8375-479E377389CC}.Release|x86.ActiveCfg = Release|Any CPU
 		{76150B64-C200-4893-8375-479E377389CC}.Release|x86.Build.0 = Release|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Debug|ARM.ActiveCfg = Debug|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Debug|ARM.Build.0 = Debug|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Debug|x64.ActiveCfg = Debug|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Debug|x64.Build.0 = Debug|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Debug|x86.ActiveCfg = Debug|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Debug|x86.Build.0 = Debug|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Release|Any CPU.Build.0 = Release|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Release|ARM.ActiveCfg = Release|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Release|ARM.Build.0 = Release|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Release|x64.ActiveCfg = Release|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Release|x64.Build.0 = Release|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Release|x86.ActiveCfg = Release|Any CPU
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A}.Release|x86.Build.0 = Release|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|Any CPU.Build.0 = Debug|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|ARM.ActiveCfg = Debug|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|ARM.Build.0 = Debug|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|x64.ActiveCfg = Debug|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|x64.Build.0 = Debug|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|x86.ActiveCfg = Debug|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Debug|x86.Build.0 = Debug|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|Any CPU.ActiveCfg = Release|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|Any CPU.Build.0 = Release|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|ARM.ActiveCfg = Release|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|ARM.Build.0 = Release|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|x64.ActiveCfg = Release|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|x64.Build.0 = Release|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|x86.ActiveCfg = Release|Any CPU
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154}.Release|x86.Build.0 = Release|Any CPU
 		{3B180912-ED04-42FE-A882-3E997038A063}.Debug|Any CPU.ActiveCfg = Debug|Any CPU
 		{3B180912-ED04-42FE-A882-3E997038A063}.Debug|Any CPU.Build.0 = Debug|Any CPU
 		{3B180912-ED04-42FE-A882-3E997038A063}.Debug|ARM.ActiveCfg = Debug|Any CPU
@@ -152,9 +114,6 @@ Global
 	GlobalSection(NestedProjects) = preSolution
 		{1404165C-13B2-43E2-A78D-6B271EB62FC8} = {008F5231-8623-4F69-88A6-45E858187BC4}
 		{76150B64-C200-4893-8375-479E377389CC} = {008F5231-8623-4F69-88A6-45E858187BC4}
-		{BA30A12E-C25B-47DF-9761-C3D752C59D3A} = {82B10F43-3A68-401C-99AB-515D409F6CD3}
-		{9BA3AECB-F606-4250-A1C3-D50E5AB53154} = {82B10F43-3A68-401C-99AB-515D409F6CD3}
-		{82B10F43-3A68-401C-99AB-515D409F6CD3} = {008F5231-8623-4F69-88A6-45E858187BC4}
 		{3B180912-ED04-42FE-A882-3E997038A063} = {008F5231-8623-4F69-88A6-45E858187BC4}
 	EndGlobalSection
 	GlobalSection(ExtensibilityGlobals) = postSolution
